<resources>
    <string name="app_name">shopping_list</string>
    <string name="failed_insert">Не удалось выполнить insert</string>
    <string name="failed_getAll">Не удалось выполнить getAll</string>
    <string name="failed_getById">Не удалось выполнить getById</string>
    <string name="failed_update">Не удалось выполнить update</string>
    <string name="failed_delete">Не удалось выполнить delete</string>

    <string name="list">Список</string>
    <string name="shopping_list">Список покупок</string>
    <string name="categories">Категории</string>
    <string name="select_categories">Выберите категории</string>
    <string name="home">Home</string>
    <string name="list_name">Название списка</string>
    <string name="select_the_time">Выберете дату</string>
    <string name="indicate_the_price">Укажите цену</string>
    <string name="indicate_the_name">Укажите название товара</string>
    <string name="save">Сохранить</string>
    <string name="name_of_category">Название категории</string>
    <string name="product_name">Название товара</string>
    <string name="price">Цена</string>
    <string name="number">Колличество</string>


</resources>